updated swagger example & schema
